[gd_scene load_steps=9 format=3]

[ext_resource type="Script" path="res://scripts/card/Card.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/imagens/CardBack.png" id="2"]
[ext_resource type="Texture2D" path="res://assets/imagens/CardFront.png" id="3"]

[sub_resource type="Animation" id="Animation_RESET"]
length = 0.001
tracks/0/type = "value"
tracks/0/enabled = true
tracks/0/path = NodePath("CardBack:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/enabled = true
tracks/1/path = NodePath("CardBack/CardFront:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_flip_down"]
resource_name = "flip-down"
length = 0.6
tracks/0/type = "value"
tracks/0/enabled = true
tracks/0/path = NodePath("CardBack/CardFront:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/enabled = true
tracks/1/path = NodePath("CardBack:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 1.2), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_flip_up"]
resource_name = "flip-up"
length = 0.6
loop_mode = 2
tracks/0/type = "value"
tracks/0/enabled = true
tracks/0/path = NodePath("CardBack:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 1.2), Vector2(1, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/enabled = true
tracks/1/path = NodePath("CardBack/CardFront:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1"]
_data = {
&"RESET": SubResource("Animation_RESET"),
&"flip-down": SubResource("Animation_flip_down"),
&"flip-up": SubResource("Animation_flip_up")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(725, 1102)

[node name="Card" type="Node2D"]
script = ExtResource("1")

[node name="CardBack" type="Sprite2D" parent="."]
texture = ExtResource("2")

[node name="CardFront" type="Sprite2D" parent="CardBack"]
visible = false
texture = ExtResource("3")

[node name="Personagem" type="Sprite2D" parent="CardBack/CardFront"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1")
}

[node name="Area2D" type="Area2D" parent="."]
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_1")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
